--- a/notebooks/Pipeline Scoring Example.ipynb
+++ b/notebooks/Pipeline Scoring Example.ipynb
@@ -160,78 +160,18 @@
      "output_type": "stream",
      "text": [
       "Train on 2054 samples, validate on 514 samples\n",
-      "Epoch 1/35\n",
-      "2054/2054 [==============================] - 12s 6ms/step - loss: 0.1063 - mean_squared_error: 0.1063 - val_loss: 0.1073 - val_mean_squared_error: 0.1073\n",
-      "Epoch 2/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1015 - mean_squared_error: 0.1015 - val_loss: 0.1080 - val_mean_squared_error: 0.1080\n",
-      "Epoch 3/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1020 - mean_squared_error: 0.1020 - val_loss: 0.1057 - val_mean_squared_error: 0.1057\n",
-      "Epoch 4/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1015 - mean_squared_error: 0.1015 - val_loss: 0.1053 - val_mean_squared_error: 0.1053\n",
-      "Epoch 5/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1005 - mean_squared_error: 0.1005 - val_loss: 0.1059 - val_mean_squared_error: 0.1059\n",
-      "Epoch 6/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1002 - mean_squared_error: 0.1002 - val_loss: 0.1045 - val_mean_squared_error: 0.1045\n",
-      "Epoch 7/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.1003 - mean_squared_error: 0.1003 - val_loss: 0.1036 - val_mean_squared_error: 0.1036\n",
-      "Epoch 8/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0988 - mean_squared_error: 0.0988 - val_loss: 0.1027 - val_mean_squared_error: 0.1027\n",
-      "Epoch 9/35\n",
-      "2054/2054 [==============================] - 11s 6ms/step - loss: 0.0986 - mean_squared_error: 0.0986 - val_loss: 0.1015 - val_mean_squared_error: 0.1015\n",
-      "Epoch 10/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0969 - mean_squared_error: 0.0969 - val_loss: 0.1007 - val_mean_squared_error: 0.1007\n",
-      "Epoch 11/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0962 - mean_squared_error: 0.0962 - val_loss: 0.1004 - val_mean_squared_error: 0.1004\n",
-      "Epoch 12/35\n",
-      "2054/2054 [==============================] - 11s 6ms/step - loss: 0.0967 - mean_squared_error: 0.0967 - val_loss: 0.0998 - val_mean_squared_error: 0.0998\n",
-      "Epoch 13/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0962 - mean_squared_error: 0.0962 - val_loss: 0.0999 - val_mean_squared_error: 0.0999\n",
-      "Epoch 14/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0958 - mean_squared_error: 0.0958 - val_loss: 0.0996 - val_mean_squared_error: 0.0996\n",
-      "Epoch 15/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0952 - mean_squared_error: 0.0952 - val_loss: 0.0990 - val_mean_squared_error: 0.0990\n",
-      "Epoch 16/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0956 - mean_squared_error: 0.0956 - val_loss: 0.1005 - val_mean_squared_error: 0.1005\n",
-      "Epoch 17/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0957 - mean_squared_error: 0.0957 - val_loss: 0.0998 - val_mean_squared_error: 0.0998\n",
-      "Epoch 18/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0955 - mean_squared_error: 0.0955 - val_loss: 0.0986 - val_mean_squared_error: 0.0986\n",
-      "Epoch 19/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0939 - mean_squared_error: 0.0939 - val_loss: 0.0974 - val_mean_squared_error: 0.0974\n",
-      "Epoch 20/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0932 - mean_squared_error: 0.0932 - val_loss: 0.0987 - val_mean_squared_error: 0.0987\n",
-      "Epoch 21/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0944 - mean_squared_error: 0.0944 - val_loss: 0.0961 - val_mean_squared_error: 0.0961\n",
-      "Epoch 22/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0933 - mean_squared_error: 0.0933 - val_loss: 0.1008 - val_mean_squared_error: 0.1008\n",
-      "Epoch 23/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0939 - mean_squared_error: 0.0939 - val_loss: 0.0972 - val_mean_squared_error: 0.0972\n",
-      "Epoch 24/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0913 - mean_squared_error: 0.0913 - val_loss: 0.0958 - val_mean_squared_error: 0.0958\n",
-      "Epoch 25/35\n",
-      "2054/2054 [==============================] - 11s 6ms/step - loss: 0.0913 - mean_squared_error: 0.0913 - val_loss: 0.0955 - val_mean_squared_error: 0.0955\n",
-      "Epoch 26/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0910 - mean_squared_error: 0.0910 - val_loss: 0.0944 - val_mean_squared_error: 0.0944\n",
-      "Epoch 27/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0890 - mean_squared_error: 0.0890 - val_loss: 0.0948 - val_mean_squared_error: 0.0948\n",
-      "Epoch 28/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0895 - mean_squared_error: 0.0895 - val_loss: 0.0898 - val_mean_squared_error: 0.0898\n",
-      "Epoch 29/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0873 - mean_squared_error: 0.0873 - val_loss: 0.0910 - val_mean_squared_error: 0.0910\n",
-      "Epoch 30/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0875 - mean_squared_error: 0.0875 - val_loss: 0.0881 - val_mean_squared_error: 0.0881\n",
-      "Epoch 31/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0872 - mean_squared_error: 0.0872 - val_loss: 0.0879 - val_mean_squared_error: 0.0879\n",
-      "Epoch 32/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0847 - mean_squared_error: 0.0847 - val_loss: 0.0868 - val_mean_squared_error: 0.0868\n",
-      "Epoch 33/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0858 - mean_squared_error: 0.0858 - val_loss: 0.0857 - val_mean_squared_error: 0.0857\n",
-      "Epoch 34/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0834 - mean_squared_error: 0.0834 - val_loss: 0.0839 - val_mean_squared_error: 0.0839\n",
-      "Epoch 35/35\n",
-      "2054/2054 [==============================] - 11s 5ms/step - loss: 0.0829 - mean_squared_error: 0.0829 - val_loss: 0.0857 - val_mean_squared_error: 0.0857\n",
-      "2568/2568 [==============================] - 3s 1ms/step\n",
-      "7081/7081 [==============================] - 7s 1ms/step\n"
+      "Epoch 1/5\n",
+      "2054/2054 [==============================] - 12s 6ms/step - loss: 0.4788 - mse: 0.4788 - val_loss: 0.4413 - val_mse: 0.4413\n",
+      "Epoch 2/5\n",
+      "2054/2054 [==============================] - 10s 5ms/step - loss: 0.4239 - mse: 0.4239 - val_loss: 0.4340 - val_mse: 0.4340\n",
+      "Epoch 3/5\n",
+      "2054/2054 [==============================] - 10s 5ms/step - loss: 0.4267 - mse: 0.4267 - val_loss: 0.4313 - val_mse: 0.4313\n",
+      "Epoch 4/5\n",
+      "2054/2054 [==============================] - 10s 5ms/step - loss: 0.4203 - mse: 0.4203 - val_loss: 0.4298 - val_mse: 0.4298\n",
+      "Epoch 5/5\n",
+      "2054/2054 [==============================] - 10s 5ms/step - loss: 0.4167 - mse: 0.4167 - val_loss: 0.4240 - val_mse: 0.4240\n",
+      "2568/2568 [==============================] - 4s 1ms/step\n",
+      "7081/7081 [==============================] - 9s 1ms/step\n"
      ]
     },
     {
@@ -263,9 +203,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1394323200</td>\n",
-       "      <td>1399701600</td>\n",
-       "      <td>0.673494</td>\n",
+       "      <td>1398600000</td>\n",
+       "      <td>1406030400</td>\n",
+       "      <td>0.434961</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -273,7 +213,7 @@
       ],
       "text/plain": [
        "        start         end     score\n",
-       "0  1394323200  1399701600  0.673494"
+       "0  1398600000  1406030400  0.434961"
       ]
      },
      "execution_count": 3,
@@ -284,9 +224,16 @@
    "source": [
     "from orion.analysis import analyze\n",
     "\n",
-    "pipeline_path = '../orion/pipelines/lstm_dynamic_threshold.json'\n",
+    "hyperparameters = {\n",
+    "    'keras.Sequential.LSTMTimeSeriesRegressor#1': {\n",
+    "        'epochs': 5,\n",
+    "        'verbose': True\n",
+    "    }\n",
+    "}\n",
     "\n",
-    "anomalies = analyze(pipeline_path, train, test)\n",
+    "pipeline = 'lstm_dynamic_threshold'\n",
+    "\n",
+    "anomalies = analyze(pipeline, train, test, hyperparameters)\n",
     "anomalies"
    ]
   },
@@ -335,8 +282,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1392768000</td>\n",
-       "      <td>1402423200</td>\n",
+       "      <td>1398168000</td>\n",
+       "      <td>1407823200</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -344,7 +291,7 @@
       ],
       "text/plain": [
        "        start         end\n",
-       "0  1392768000  1402423200"
+       "0  1398168000  1407823200"
       ]
      },
      "execution_count": 4,
@@ -354,6 +301,7 @@
    ],
    "source": [
     "from orion.data import load_anomalies\n",
+    "\n",
     "known_anomalies = load_anomalies('S-1')\n",
     "known_anomalies"
    ]
@@ -363,8 +311,30 @@
    "metadata": {},
    "source": [
     "Afterwards, we pass the ground truth, the detected anomalies and the original data\n",
-    "to the `orion.metrics.accuracy_score` and `orion.metrics.f1_score` functions in order\n",
-    "to compute a score that indicates how good our anomaly detection was:"
+    "to the `orion.metrics.contextual_accuracy` and `orion.metrics.contextual_f1_score` functions in order\n",
+    "to compute a score that indicates how good our anomaly detection was. You can read more about how to evaluate a pipeline [here](https://signals-dev.github.io/Orion/user_guides/evaluation_doc.html)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9859481582537517"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from orion.evaluation import contextual_accuracy, contextual_f1_score\n",
+    "\n",
+    "contextual_accuracy(known_anomalies, anomalies, test)"
    ]
   },
   {
@@ -375,7 +345,7 @@
     {
      "data": {
       "text/plain": [
-       "0.972987721691678"
+       "0.8697850974171117"
       ]
      },
      "execution_count": 6,
@@ -384,28 +354,7 @@
     }
    ],
    "source": [
-    "from orion.metrics import accuracy_score, f1_score\n",
-    "accuracy_score(known_anomalies, anomalies, test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7155172413793103"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f1_score(known_anomalies, anomalies, test)"
+    "contextual_f1_score(known_anomalies, anomalies, test)"
    ]
   }
  ],
@@ -425,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
