add tadgan to pipeline notebooks

--- a/notebooks/pipelines/tadgan.ipynb
+++ b/notebooks/pipelines/tadgan.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
+   "id": "ec348c3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +15,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "59a92a1d",
    "metadata": {},
    "source": [
     "# 1. Data"
@@ -22,6 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "aef49dfa",
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +106,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0662cfbe",
    "metadata": {},
    "source": [
     "# 2. Pipeline"
@@ -111,25 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "da94f5a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Users/sarah/opt/anaconda3/envs/orion/lib/python3.6/site-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "If using Keras pass *_constraint arguments to layers.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mlblocks import MLPipeline\n",
     "\n",
@@ -141,6 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "e44cac9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +146,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f19a9d69",
    "metadata": {},
    "source": [
     "## step by step execution\n",
@@ -169,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "9da7ed0b",
    "metadata": {},
    "outputs": [
     {
@@ -194,6 +185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12dac4e7",
    "metadata": {},
    "source": [
     "### time segments aggregate\n",
@@ -208,6 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "4922454a",
    "metadata": {},
    "outputs": [
     {
@@ -229,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "7a90cad2",
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +244,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f7653cf",
    "metadata": {},
    "source": [
     "### SimpleImputer\n",
@@ -261,6 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "104eb603",
    "metadata": {},
    "outputs": [
     {
@@ -283,6 +279,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42d6d22a",
    "metadata": {},
    "source": [
     "### MinMaxScaler\n",
@@ -294,6 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "ee9b809e",
    "metadata": {},
    "outputs": [
     {
@@ -317,6 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "297dc7bb",
    "metadata": {},
    "outputs": [
     {
@@ -342,6 +341,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "630ce3f2",
    "metadata": {},
    "source": [
     "### rolling window sequence\n",
@@ -360,6 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "9b49073b",
    "metadata": {},
    "outputs": [
     {
@@ -383,6 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "24b430e9",
    "metadata": {},
    "outputs": [
     {
@@ -408,6 +410,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ed5ccdec",
    "metadata": {},
    "source": [
     "### TadGAN\n",
@@ -421,54 +424,23 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "d472affe",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /Users/sarah/opt/anaconda3/envs/orion/lib/python3.6/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sarah/opt/anaconda3/envs/orion/lib/python3.6/site-packages/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
-      "  'Discrepancy between trainable weights and collected trainable'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Users/sarah/opt/anaconda3/envs/orion/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sarah/opt/anaconda3/envs/orion/lib/python3.6/site-packages/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
-      "  'Discrepancy between trainable weights and collected trainable'\n",
-      "/Users/sarah/opt/anaconda3/envs/orion/lib/python3.6/site-packages/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
-      "  'Discrepancy between trainable weights and collected trainable'\n",
-      "/Users/sarah/opt/anaconda3/envs/orion/lib/python3.6/site-packages/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
-      "  'Discrepancy between trainable weights and collected trainable'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 1/5, [Dx loss: [-2.6776628  -4.5917287   0.9348483   0.09792167]] [Dz loss: [-1.0969741  -1.4592503  -0.78547704  0.11477532]] [G loss: [ 2.9390972  -0.9107458   1.4552648   0.23945776]]\n",
-      "Epoch: 2/5, [Dx loss: [-3.6530893  -5.466679    1.3018161   0.05117736]] [Dz loss: [-3.2299697  -3.0031188  -1.3129394   0.10860875]] [G loss: [ 2.799485   -1.2751291   1.7046444   0.23699693]]\n",
-      "Epoch: 3/5, [Dx loss: [-3.4280794  -5.222771    1.3065965   0.04880931]] [Dz loss: [-2.2623312  -2.473338   -0.3233766   0.05343825]] [G loss: [ 1.7164162  -1.3127668   0.7973495   0.22318335]]\n",
-      "Epoch: 4/5, [Dx loss: [-3.4212792  -5.419557    1.5358766   0.04624021]] [Dz loss: [-1.5228959  -0.24059121 -1.700906    0.04186013]] [G loss: [ 2.9546404  -1.5201428   2.318647    0.21561353]]\n",
-      "Epoch: 5/5, [Dx loss: [-3.4299202  -5.2663007   1.4025416   0.04338401]] [Dz loss: [-0.9210284   0.37030175 -1.9520515   0.06607217]] [G loss: [ 3.5728276  -1.3929796   2.7340674   0.22317404]]\n"
+      "Epoch 1/5\n",
+      "157/157 [==============================] - 83s 238ms/step - Cx_loss: -1.5646 - Cz_loss: 0.4833 - EG_loss: 0.5151\n",
+      "Epoch 2/5\n",
+      "157/157 [==============================] - 38s 242ms/step - Cx_loss: -1.2155 - Cz_loss: 0.2808 - EG_loss: 0.1402\n",
+      "Epoch 3/5\n",
+      "157/157 [==============================] - 38s 243ms/step - Cx_loss: -1.0253 - Cz_loss: 0.2510 - EG_loss: -0.2834\n",
+      "Epoch 4/5\n",
+      "157/157 [==============================] - 38s 245ms/step - Cx_loss: -0.8909 - Cz_loss: 0.2705 - EG_loss: -0.7454\n",
+      "Epoch 5/5\n",
+      "157/157 [==============================] - 39s 245ms/step - Cx_loss: -0.7908 - Cz_loss: 0.2145 - EG_loss: -0.9039\n"
      ]
     },
     {
@@ -491,18 +463,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
+   "id": "fd80594f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entry at 1224979200 has value [1.], predicted value -0.4282296895980835\n",
-      "entry at 1225000800 has value [-0.34946279], predicted value -0.4239683151245117\n",
-      "entry at 1225022400 has value [-0.37232052], predicted value -0.44071683287620544\n",
-      "entry at 1225044000 has value [1.], predicted value -0.44799137115478516\n",
-      "entry at 1225065600 has value [-0.24757408], predicted value -0.45670443773269653\n"
+      "entry at 1224979200 has value [1.], predicted value 0.10256014128245595\n",
+      "entry at 1225000800 has value [-0.34946279], predicted value 0.09228014313149321\n",
+      "entry at 1225022400 has value [-0.37232052], predicted value 0.041902088593635575\n",
+      "entry at 1225044000 has value [1.], predicted value -0.050774280607923696\n",
+      "entry at 1225065600 has value [-0.24757408], predicted value -0.0704573814727296\n"
      ]
     }
    ],
@@ -534,6 +507,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d13cc242",
    "metadata": {},
    "source": [
     "### score anomalies\n",
@@ -554,7 +528,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
+   "id": "08e8d2ac",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +538,7 @@
        "dict_keys(['index', 'X_index', 'target_index', 'y_hat', 'critic', 'X', 'y', 'errors', 'true_index', 'true', 'predictions'])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,18 +552,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
+   "id": "a9233fba",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "entry at 1224979200 has error value 1.571\n",
-      "entry at 1225000800 has error value 1.569\n",
-      "entry at 1225022400 has error value 1.567\n",
-      "entry at 1225044000 has error value 1.565\n",
-      "entry at 1225065600 has error value 1.562\n"
+      "entry at 1224979200 has error value 1.486\n",
+      "entry at 1225000800 has error value 1.484\n",
+      "entry at 1225022400 has error value 1.482\n",
+      "entry at 1225044000 has error value 1.481\n",
+      "entry at 1225065600 has error value 1.479\n"
      ]
     }
    ],
@@ -599,6 +575,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "801dc1c9",
    "metadata": {},
    "source": [
     "### find anomalies\n",
@@ -612,7 +589,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
+   "id": "c8f52a0f",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +599,7 @@
        "dict_keys(['index', 'X_index', 'target_index', 'y_hat', 'critic', 'errors', 'true_index', 'true', 'predictions', 'X', 'y'])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +613,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
+   "id": "429a0575",
    "metadata": {},
    "outputs": [
     {
@@ -667,27 +646,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.248264e+09</td>\n",
-       "      <td>1.250640e+09</td>\n",
-       "      <td>0.152003</td>\n",
+       "      <td>1.265501e+09</td>\n",
+       "      <td>1.267985e+09</td>\n",
+       "      <td>0.166040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.265544e+09</td>\n",
-       "      <td>1.267963e+09</td>\n",
-       "      <td>0.146268</td>\n",
+       "      <td>1.349525e+09</td>\n",
+       "      <td>1.352376e+09</td>\n",
+       "      <td>0.308477</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.349741e+09</td>\n",
-       "      <td>1.352333e+09</td>\n",
-       "      <td>0.265520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.401516e+09</td>\n",
-       "      <td>1.405361e+09</td>\n",
-       "      <td>2.304467</td>\n",
+       "      <td>1.399226e+09</td>\n",
+       "      <td>1.404994e+09</td>\n",
+       "      <td>0.543284</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -695,13 +668,12 @@
       ],
       "text/plain": [
        "          start           end  severity\n",
-       "0  1.248264e+09  1.250640e+09  0.152003\n",
-       "1  1.265544e+09  1.267963e+09  0.146268\n",
-       "2  1.349741e+09  1.352333e+09  0.265520\n",
-       "3  1.401516e+09  1.405361e+09  2.304467"
+       "0  1.265501e+09  1.267985e+09  0.166040\n",
+       "1  1.349525e+09  1.352376e+09  0.308477\n",
+       "2  1.399226e+09  1.404994e+09  0.543284"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,9 +685,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "orion",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "orion"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -727,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
