edit notebook + infer shape sizes when null

--- a/notebooks/Using Orion on multivariate input.ipynb
+++ b/notebooks/Using Orion on multivariate input.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Orion on multivariate input\n",
+    "# Using Orion on Multivariate Input\n",
     "\n",
     "In this notebook, we demonstrate how you can use multivariate time series in Orion. We will walk through the process using NASA's dataset, you can find the original data in [Telemanom](https://github.com/khundman/telemanom) github or directly from their [S3 bucket](https://s3-us-west-2.amazonaws.com/telemanom/data.zip)."
    ]
@@ -238,12 +238,12 @@
     "\n",
     "Once we have the data, let us try to use the LSTM pipeline to analyze it and search for anomalies.\n",
     "\n",
-    "In order to do so, we will have import the `Orion` class from `orion.core` and pass it\n",
+    "In order to do so, we will import the `Orion` class from `orion.core` and pass it\n",
     "the loaded data and the path to the pipeline JSON that we want to use.\n",
     "\n",
     "In this case, we will be using the `lstm_dynamic_threshold` pipeline from inside the `orion` folder. \n",
     "\n",
-    "In addition, we setup the hyperparameters to correctly identify the signal I am trying to predict. In this case, dimension `0` is the signal value and such we set `target_column` to `0`. Note that `0` refers to the location of the channel rather than the name."
+    "In addition, we setup the hyperparameters to correctly identify the signal we are trying to predict. In this case, dimension `0` is the signal value and such we set `target_column` to `0`. Note that `0` refers to the location of the channel rather than the name."
    ]
   },
   {
@@ -398,7 +398,7 @@
     "1. `window_size` and \n",
     "2. the number of channels in the data.\n",
     "\n",
-    "similarly, the shape of the output is dependent on the `window_size`, and currently we are focusing on multivariate input and univariate output, therefore the target shape should always be [`window_size`, 1]."
+    "Similarly, the shape of the output is dependent on the `window_size`. Currently, we are focusing on multivariate input and univariate output, therefore the target shape should always be [`window_size`, 1]."
    ]
   },
   {
