--- a/notebooks/tulog/Tulog.ipynb
+++ b/notebooks/tulog/Tulog.ipynb
@@ -1018,8 +1018,8 @@
     "from model import hyperparameters\n",
     "from orion.primitives.tadgan import TadGAN\n",
     "\n",
-    "hyperparameters[\"epochs\"] = 100\n",
-    "hyperparameters[\"shape\"] = (100, 1) # based on the window size\n",
+    "hyperparameters[\"epochs\"] = 35\n",
+    "hyperparameters[\"input_shape\"] = (100, 1) # based on the window size\n",
     "hyperparameters[\"optimizer\"] = \"keras.optimizers.Adam\"\n",
     "hyperparameters[\"learning_rate\"] = 0.0005\n",
     "hyperparameters[\"latent_dim\"] = 20\n",
@@ -1989,7 +1989,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2003,7 +2003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
