--- a/notebooks/pipelines/azure.ipynb
+++ b/notebooks/pipelines/azure.ipynb
@@ -128,6 +128,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# your subscription key and endpoint\n",
+    "\n",
+    "subscription_key = None\n",
+    "endpoint = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hyperparameters = {\n",
     "    \"mlprimitives.custom.timeseries_preprocessing.time_segments_aggregate#1\": {\n",
     "        \"interval\": 21600,\n",
@@ -137,8 +149,8 @@
     "        \"overlap_size\": 2640\n",
     "    },\n",
     "    \"orion.primitives.azure_anomaly_detector.detect_anomalies#1\": {\n",
-    "        \"subscription_key\": \"your-key-here\", # replace with your key\n",
-    "        \"endpoint\": \"your-endpoint-here\", # replace with your endpoint\n",
+    "        \"subscription_key\": subscription_key,\n",
+    "        \"endpoint\": endpoint,\n",
     "        \"overlap_size\": 2640,\n",
     "        \"interval\": 21600,\n",
     "        \"granularity\": \"hourly\",\n",
@@ -174,91 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>start</th>\n",
-       "      <th>end</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1222862400</td>\n",
-       "      <td>1222862400</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1222970400</td>\n",
-       "      <td>1222970400</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1223013600</td>\n",
-       "      <td>1223013600</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1223056800</td>\n",
-       "      <td>1223056800</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1223121600</td>\n",
-       "      <td>1223121600</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        start         end score\n",
-       "0  1222862400  1222862400  None\n",
-       "1  1222970400  1222970400  None\n",
-       "2  1223013600  1223013600  None\n",
-       "3  1223056800  1223056800  None\n",
-       "4  1223121600  1223121600  None"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from orion.analysis import analyze\n",
     "\n",
     "pipeline_path = 'azure'\n",
     "\n",
-    "anomalies = analyze(pipeline_path, data, hyperparams=hyperparameters)\n",
-    "anomalies.head(5)"
+    "if subscription_key and endpoint:\n",
+    "    anomalies = analyze(pipeline_path, data, hyperparams=hyperparameters)"
    ]
   }
  ],
@@ -278,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
